--- a/accets/style.css
+++ b/accets/style.css
@@ -6,23 +6,22 @@
 
 .main{
     background: #1E1E1E;
-    width: 400px;
-    height: 800px;
+    width: 260px;
+    height: 720px;
     border-radius: 30px;
     overflow: hidden;
 }
 
 .main-top{
-    height: 400px;
+    height: 360px;
     width: 400px;
 }
 
 .main-bottom{
     background: #383838;
-    height: 400px;
-    width: 400px;
     display: flex;
     padding: 40px;
+    height: 360px;
 }
 
 .main-bottom-column{
@@ -38,6 +37,25 @@
     margin-left: 10px;
 }
 
+.button-double{
+    width: 80px;
+    height: 180px;
+    border-radius: 40px;
+    background: #4B4B4B;
+    box-shadow: 0 0 5px 5px #262626;
+}
+
+.button-double .button{
+    box-shadow: none;
+    background: none;
+}
+
+.button.button--large{
+    width: 80px;
+    height: 180px;
+    border-radius: 40px;
+}
+
 .button{
     background: #4B4B4B;
     border: 0;
@@ -48,8 +66,7 @@
     box-shadow: 0 0 5px 5px #262626;
 }
 
-.button.button--large{
-    width: 80px;
-    height: 180px;
-    border-radius: 40px;
+
+.button.button--last{
+    margin: 0;
 }
