Добавление кнопок для верхней части пульта Стилизация верхней части пульта Закончила стилизацию пульта

--- a/accets/style.css
+++ b/accets/style.css
@@ -14,7 +14,87 @@
 
 .main-top{
     height: 360px;
-    width: 400px;
+    width: 260px;
+    position: relative;
+    padding: 16px;
+}
+
+.button-off{
+    background: #F54B3D;
+    width: 24px;
+    height: 24px;
+    border-radius: 20px;
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    border: none;
+    /*box-shadow: 0 0 2px 2px #262626;*/
+}
+
+.main-top-control{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.main-bottom-row{
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-bottom-row.main-bottom-row--center{
+    justify-content: center;
+}
+
+.button-arrow{
+    width: 40px;
+    height: 40px;
+    background: none;
+    border: 0;
+
+}
+
+.button-arrow-icon-top{
+    width: 0px;
+    height: 0px;
+    border-left: 16px solid transparent;
+    border-right: 16px solid transparent;
+    border-bottom: 24px solid #444444;
+}
+
+.button-arrow-icon-left{
+    width: 0px;
+    height: 0px;
+    border-top: 16px solid transparent;
+    border-bottom: 16px solid transparent;
+    border-right: 24px solid #444444;
+}
+
+.button-arrow-icon-right{
+    width: 0px;
+    height: 0px;
+    border-top: 16px solid transparent;
+    border-bottom: 16px solid transparent;
+    border-left: 24px solid #444444;
+}
+
+.button-arrow-icon-bottom{
+    width: 0px;
+    height: 0px;
+    border-left: 16px solid transparent;
+    border-right: 16px solid transparent;
+    border-top: 24px solid #444444;
+}
+
+.button-text{
+    height: 40px;
+    width: 40px;
+    background: none;
+    border: 0;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .main-bottom{
