--- a/accets/style.css
+++ b/accets/style.css
@@ -4,19 +4,45 @@
     padding: 0;
 }
 
-.main{
-    background: #1E1E1E;
-    width: 260px;
-    height: 720px;
-    border-radius: 30px;
-    overflow: hidden;
+.view-circle{
+    width: 900px;
+    height: 900px;
+    border-radius: 50%;
+    border: solid 4px #000000;
+    background: #131416;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 8px 0 #262626, inset 0 0 8px 0 #2e2e2e;
 }
 
+.view{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #505051;
+}
+
+
+.main{
+    width: 260px;
+    height: 720px;
+    /*border: solid 4px #2a2a2a;*/
+    box-shadow: 0 0 5px 0 #262626;
+    border-radius: 30px;
+}
 .main-top{
     height: 360px;
     width: 260px;
+    background: #1E1E1E;
+    border-radius: 30px 30px 0 0;
+    overflow: hidden;
     position: relative;
     padding: 16px;
+    border: solid 4px #2a2a2a;
+    border-bottom: none;
 }
 
 .button-off{
@@ -102,6 +128,11 @@
     display: flex;
     padding: 40px;
     height: 360px;
+    border-radius: 0 0 30px 30px;
+    overflow: hidden;
+    position: relative;
+    border: solid 4px #444444;
+    border-top: none;
 }
 
 .main-bottom-column{
