--- a/accets/style.css
+++ b/accets/style.css
@@ -4,6 +4,16 @@
     padding: 0;
 }
 
+.view{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #505051;
+    transition: background-color 0.3s ease;
+}
+
 .view-circle{
     width: 900px;
     height: 900px;
@@ -14,15 +24,7 @@
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 8px 0 #262626, inset 0 0 8px 0 #2e2e2e;
-}
-
-.view{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #505051;
+    transition: background-color 0.3s ease;
 }
 
 
