--- a/accets/style.css
+++ b/accets/style.css
@@ -6,12 +6,43 @@
 
 .view{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #505051;
     transition: background-color 0.3s ease;
+}
+
+.view-controls{
+    width: 48px;
+    height: 180px;
+    background: #1E1E1E;
+    border-radius: 20px;
+    border: solid 3px #2a2a2a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 32px;
+    right: 32px;
+}
+
+.view-controls-volume{
+    width: 16px;
+    height: 140px;
+    background: #444444;
+    border-radius: 8px;
+    display: flex;
+    align-items: flex-end;
+}
+
+.view-controls-volume-bar{
+    width: 16px;
+    height: 30%;
+    background: white;
+    border-radius: 8px;
+    transition: height 0.3s ease;
 }
 
 .view-circle{
