Реализовала появление плашки громкости при нажатии на кнопки: прибавить/ убавить звук и выключить громкость

--- a/accets/style.css
+++ b/accets/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+html,body {
+    font-family: "Segoe UI", sans-serif;
+}
+
 .view{
     width: 100%;
     min-height: 100vh;
@@ -18,7 +22,7 @@
     width: 48px;
     height: 180px;
     background: #1E1E1E;
-    border-radius: 20px;
+    border-radius: 8px;
     border: solid 3px #2a2a2a;
     display: flex;
     justify-content: center;
@@ -26,6 +30,9 @@
     position: fixed;
     top: 32px;
     right: 32px;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .view-controls-volume{
@@ -43,6 +50,52 @@
     background: white;
     border-radius: 8px;
     transition: height 0.3s ease;
+}
+
+.view-menu{
+    padding: 16px;
+    background: #1E1E1E;
+    border-radius: 8px;
+    border: solid 3px #2a2a2a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 32px;
+    left: 32px;
+    flex-direction: column;
+}
+
+.view-menu-item{
+    min-width: 240px;
+    padding: 8px;
+    border-radius: 8px;
+    background: #444444;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 8px;
+}
+
+.view-menu-item:hover{
+    background: #4B4B4B;
+}
+
+.view-menu-item-text{
+    color: white;
+    font-size: 12px;
+}
+
+
+.view-menu-item-value{
+    padding: 8px 16px;
+    border-radius: 8px;
+    background: #444444;
+    font-size: 12px;
+    color: white;
+    box-shadow: 0 0 1px 1px #262626;
+
 }
 
 .view-circle{
